--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -15,7 +15,7 @@ block content
 			span design
 		.catalog__container.b-container
 			.filter
-				.filter__item web design
+				.filter__item.filter__item--active web design
 				.filter__item banner
 				.filter__item product design
 				.filter__item logotype
