--- a/src/dev/sass/components/lang.scss
+++ b/src/dev/sass/components/lang.scss
@@ -9,6 +9,7 @@
         font-size: 1.125rem;
         letter-spacing: 0.12rem;
         text-transform: uppercase;
+        text-decoration: none;
         color: #484848;
 
         &--active {
