--- a/src/pug/modules/header.pug
+++ b/src/pug/modules/header.pug
@@ -12,7 +12,7 @@ include ../mixins
             div
             div
         .nav__items
-            a(href="#").nav__item home page
+            a(href="#").nav__item.nav__item--active home page
             a(href="#").nav__item design
             a(href="#").nav__item illustration
             a(href="#").nav__item Graphics design
