--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -19,6 +19,15 @@ block content
 				.filter__item banner
 				.filter__item product design
 				.filter__item logotype
+			.filter-acc
+				.filter-acc__title web design
+					.filter-acc__arrow
+						+svg('triang')
+				.filter-acc__menu
+					.filter-acc__items
+						.filter-acc__item banner
+						.filter-acc__item product design
+						.filter-acc__item logotype
 			.catalog__items
 				.card
 					.card__title travel agency
