--- a/src/dev/sass/components/catalog.scss
+++ b/src/dev/sass/components/catalog.scss
@@ -29,7 +29,7 @@
             }
         }
 
-        @media (max-width:620px) {
+        @media (max-width:1023px) {
             margin: 35px 0px 0;
         }
     }
@@ -38,11 +38,30 @@
         font-size: 1.375rem;
         line-height: 1.625rem;
         letter-spacing: 0.15rem;
-        text-decoration-line: underline;
         margin: 45px auto 0;
         cursor: pointer;
         display: block;
         max-width: 60px;
         text-align: center;
+        position: relative;
+
+        &:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            height: 1px;
+            background-color: $white;
+            transition: ease-out 0.2s;
+        }
+
+        &:hover {
+
+            &:after {
+                right: -3px;
+                left: -3px;
+            }
+        }
     }
 }
