--- a/src/dev/sass/components/filter.scss
+++ b/src/dev/sass/components/filter.scss
@@ -34,4 +34,84 @@
             }
         }
     }
+
+    @media (max-width:1023px) {
+        display: none;
+    }
+
+    &-acc {
+        display: none;
+        max-width: 185px;
+        width: 100%;
+        margin: 0 auto;
+        font-family: 'agavantgardecyr', serif;
+        font-size: 0.875rem;
+        line-height: 0.875rem;
+        letter-spacing: 0.3em;
+        text-transform: uppercase;
+        position: relative;
+        z-index: 10;
+
+        &__title {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+
+            &--open {
+
+                & .filter-acc__arrow {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+
+        &__arrow {
+            width: 11px;
+            height: 13px;
+            transition: ease-out 0.3s;
+
+            & svg {
+                display: block;
+                width: 100%;
+                height: 100%;
+                fill: #6B6B6B;
+            }
+        }
+
+        &__menu {
+            overflow: hidden;
+            position: absolute;
+            top: 200%;
+            width: 100%;
+            transform: scaleY(0);
+            transform-origin: top;
+            opacity: 0;
+            transition: ease-out 0.3s;
+
+            &--open {
+                opacity: 1;
+                transform: scaleY(1);
+            }
+        }
+
+        &__items {
+            background-color: $black;
+            border: 1px solid #FFF5F5;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            padding: 15px;
+        }
+
+        &__item {
+            margin: 15px;
+            cursor: pointer;
+        }
+
+        @media (max-width:1023px) {
+            display: block;
+        }
+    }
 }
