--- a/src/dev/sass/components/header.scss
+++ b/src/dev/sass/components/header.scss
@@ -7,6 +7,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 38px;
-    margin-top: 45px;
+    padding: 45px 38px 0;
+    transition: ease-in-out 0.2s;
+
+    &--fixed {
+        border-bottom: 1px solid $white;
+        background-color: $black;
+        padding: 10px 38px;
+    }
 }
