--- a/src/dev/sass/components/vertical-title.scss
+++ b/src/dev/sass/components/vertical-title.scss
@@ -1,7 +1,7 @@
 .vertical-title {
     position: absolute;
-    top: 0;
-    left: 100px;
+    top: -30px;
+    left: 80px;
     transform: rotate(-90deg) translateY(100%) translateX(-100%);
     transform-origin: left bottom;
     font-size: 1.625rem;
