--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -29,22 +29,22 @@ block content
 						.filter-acc__item product design
 						.filter-acc__item logotype
 			.catalog__items
-				.card
+				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card
+				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card
+				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card
+				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card
+				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card
+				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
 			a(href="#").catalog__more more
