--- a/src/dev/sass/components/card.scss
+++ b/src/dev/sass/components/card.scss
@@ -3,8 +3,8 @@
     width: 100%;
     height: 371px;
     position: relative;
+    padding: 61px 0 0 69px;
     transition: ease-out 0.6s;
-    cursor: pointer;
 
     &:before {
         content: '';
@@ -39,8 +39,6 @@
         color: $black;
         position: relative;
         z-index: 10;
-        margin-left: 69px;
-        margin-top: 61px;
     }
 
     &__image {
@@ -50,11 +48,15 @@
         right: -20px;
     }
 
-    &:hover {
+    &--action {
+        cursor: pointer;
 
-        &:before {
-            top: 11px;
-            left: 15px;
+        &:hover {
+
+            &:before {
+                top: 11px;
+                left: 15px;
+            }
         }
     }
 }
