--- a/src/dev/sass/main.scss
+++ b/src/dev/sass/main.scss
@@ -66,17 +66,47 @@ input::-ms-clear {
   display: none;
 }
 
-@import 'components/header.scss';
-@import 'components/footer.scss';
-@import 'components/burger.scss';
-@import 'components/lang.scss';
-@import 'components/logo.scss';
-@import 'components/billboard.scss';
-@import 'components/nav.scss';
-@import 'components/catalog.scss';
-@import 'components/filter.scss';
-@import 'components/card.scss';
-@import 'components/vertical-title.scss';
+.link {
+  font-size: 1.125rem;
+  letter-spacing: 0.15rem;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 1px;
+    background-color: $white;
+    transition: ease-out 0.2s;
+  }
+
+  &:hover {
+
+      &:after {
+          right: -3px;
+          left: -3px;
+      }
+  }
+}
+
+@import './components/header.scss';
+@import './components/footer.scss';
+@import './components/burger.scss';
+@import './components/lang.scss';
+@import './components/logo.scss';
+@import './components/billboard.scss';
+@import './components/nav.scss';
+@import './components/catalog.scss';
+@import './components/filter.scss';
+@import './components/card.scss';
+@import './components/vertical-title.scss';
+@import './components/work.scss';
+@import './components/illustration.scss';
 
 #particles-js {
   position: absolute;
