--- a/src/dev/sass/main.scss
+++ b/src/dev/sass/main.scss
@@ -107,6 +107,7 @@ input::-ms-clear {
 @import './components/vertical-title.scss';
 @import './components/work.scss';
 @import './components/illustration.scss';
+@import './components/blog.scss';
 
 #particles-js {
   position: absolute;
