--- a/src/pug/pages/illustration.pug
+++ b/src/pug/pages/illustration.pug
@@ -66,84 +66,9 @@ block content
 						img(src="img/illustration.jpg", alt="")
 					.illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
-					.illustration__item
-						img(src="img/illustration.jpg", alt="")
+			.illustration__section
+				.illustration__year 2018
+				.illustration__items
 					.illustration__item
 						img(src="img/illustration.jpg", alt="")
 					.illustration__item
