--- a/src/dev/sass/components/vertical-title.scss
+++ b/src/dev/sass/components/vertical-title.scss
@@ -1,7 +1,7 @@
 .vertical-title {
     position: absolute;
     top: -30px;
-    left: 80px;
+    left: 50px;
     transform: rotate(-90deg) translateY(100%) translateX(-100%);
     transform-origin: left bottom;
     font-size: 1.625rem;
@@ -66,5 +66,6 @@
         line-height: 0.875rem;
         color: #6B6B6B;
         left: 10px;
+        top: 0;
     }
 }
