--- a/src/dev/sass/components/logo.scss
+++ b/src/dev/sass/components/logo.scss
@@ -3,7 +3,7 @@
     font-weight: normal;
     font-size: 1.875rem;
     line-height: 2.1875rem;
-    letter-spacing: 0.53em;
+    letter-spacing: 0.53rem;
     text-transform: uppercase;
     color: $white;
     text-decoration: none;
