--- a/src/pug/modules/header.pug
+++ b/src/pug/modules/header.pug
@@ -1,20 +1,22 @@
 include ../mixins
 .header
-    .burger#openNav
-        div
-        div
-    .toggle-lang
-        a(href="#").toggle-lang__item.toggle-lang__item--ru.toggle-lang__item--active RU
-        a(href="#").toggle-lang__item.toggle-lang__item--en EN
-    a(href="/").logo DI
-    .nav#nav
-        .nav__close#closeNav
-            div
-            div
-        .nav__items
-            a(href="#").nav__item.nav__item--active home page
-            a(href="#").nav__item design
-            a(href="#").nav__item illustration
-            a(href="#").nav__item Graphics design
-            a(href="#").nav__item blog
-            a(href="#").nav__item contact
+	.burger#openNav
+		div
+		div
+		div
+	.toggle-lang
+		a(href="#").toggle-lang__item.toggle-lang__item--ru.toggle-lang__item--active RU
+		a(href="#").toggle-lang__item.toggle-lang__item--en EN
+	a(href="/").logo DI
+	.nav#nav
+		.nav__close-zone
+		.nav__close#closeNav
+			div
+			div
+		.nav__items
+			a(href="#").nav__item.nav__item--active home page
+			a(href="#").nav__item design
+			a(href="#").nav__item illustration
+			a(href="#").nav__item Graphics design
+			a(href="#").nav__item blog
+			a(href="#").nav__item contact
