--- a/src/dev/sass/components/article.scss
+++ b/src/dev/sass/components/article.scss
@@ -1,3 +1,130 @@
 .article {
+    margin-top: 100px;
+    position: relative;
     
+    &__container {
+        max-width: 1260px;
+    }
+
+    &__date {
+        font-family: 'Agavantgardecyr', sans-serif;
+        font-weight: 200;
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+        letter-spacing: 0.1rem;
+    }
+
+    &__title {
+        font-family: 'Agavantgardecyr', sans-serif;
+        margin-top: 10px;
+        font-weight: 200;
+        font-size: 1.75rem;
+        line-height: 2.625rem;
+        letter-spacing: 0.1rem;
+        text-transform: uppercase;
+        max-width: 530px;
+    }
+
+    &__description {
+        margin-top: 45px;
+        max-width: 640px;
+
+        & p {
+
+            & + p {
+                margin-top: 20px;
+            }
+        }
+    }
+
+    &__content {
+        margin-top: 100px;
+
+        & > div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            & div:first-child {
+                max-width: 640px;
+
+                & h2 {
+                    font-family: 'Agavantgardecyr', sans-serif;
+                    font-weight: 200;
+                    font-size: 1.5rem;
+                    line-height: 2.25rem;
+                    letter-spacing: 0.1rem;
+                    text-transform: uppercase;
+
+                    & + p {
+                        margin-top: 30px;
+
+                        & + p {
+                            margin-top: 20px;
+                        }
+                    }
+                }
+            }
+
+            & div:last-child {
+                position: relative;
+
+                & div:first-child {
+                    max-width: 540px;
+                    height: 430px;
+                    padding: 0 0 25px 25px;
+                    position: relative;
+                    z-index: 5;
+
+                    & img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        top: 25px;
+                        left: 0;
+                        right: 25px;
+                        bottom: 0;
+                        border: 1px solid #FBFAFA;
+                    }
+                }
+
+                & div:last-child {
+                    max-width: 545px;
+                    width: 100%;
+                    height: 385px;
+                    position: absolute;
+                    left: calc(100% - 50px);
+                    top: -100px;
+                    padding: 35px;
+                    border: 1px solid #FBFAFA;
+
+                    & img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+            & + div {
+                margin-top: 65px;
+            }
+
+            &:nth-child(even) {
+                flex-direction: row-reverse;
+
+                & div:last-child {
+
+                    & div:last-child {
+                        left: calc(-100% + 70px);
+                    }
+                }
+            }
+        }
+    }
 }
