--- a/src/dev/sass/main.scss
+++ b/src/dev/sass/main.scss
@@ -119,6 +119,8 @@ input::-ms-clear {
 @import './components/illustration.scss';
 @import './components/blog.scss';
 @import './components/article.scss';
+@import './components/form.scss';
+@import './components/contacts.scss';
 
 #particles-js {
   position: absolute;
