--- a/src/dev/sass/main.scss
+++ b/src/dev/sass/main.scss
@@ -121,6 +121,7 @@ input::-ms-clear {
 @import './components/article.scss';
 @import './components/form.scss';
 @import './components/contacts.scss';
+@import './components/about.scss';
 
 #particles-js {
   position: absolute;
