--- a/src/dev/sass/components/contacts.scss
+++ b/src/dev/sass/components/contacts.scss
@@ -6,22 +6,44 @@
         display: flex;
         justify-content: flex-start;
         max-width: 1260px;
+
+        @media (max-width:1023px) {
+            padding-left: 35px;
+            flex-wrap: wrap;
+        }
     }
 
     &__left,
     &__right {
         width: 50%;
+
+        @media (max-width:1023px) {
+            width: 100%;
+        }
     }
 
     &__right {
         margin-top: 140px;
+
+        @media (max-width:1023px) {
+            margin-top: 40px;
+        }
     }
 
     &__item {
         display: flex;
+        align-items: flex-start;
 
         & + .contacts__item {
             margin-top: 85px;
+
+            @media (max-width:1023px) {
+                margin-top: 40px;
+            }
+        }
+
+        @media (max-width:500px) {
+            flex-wrap: wrap;
         }
     }
 
@@ -33,6 +55,14 @@
         letter-spacing: 0.12rem;
         text-transform: uppercase;
         margin-right: 53px;
+
+        @media (max-width:1023px) {
+            margin-right: 30px;
+        }
+
+        @media (max-width:500px) {
+            width: 100%;
+        }
     }
 
     &__value {
@@ -43,6 +73,10 @@
 
         & + .contacts__value {
             margin-left: 70px;
+
+            @media (max-width:1023px) {
+                margin-left: 30px;
+            }
         }
 
         &--social {
@@ -58,6 +92,10 @@
                 bottom: -2px;
                 background-color: #fff;
             }
+        }
+
+        @media (max-width:500px) {
+            margin-top: 10px;
         }
     }
 }
