--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -29,5 +29,6 @@ html(lang="ru-RU")
 			block content
 			include ../modules/footer
 		script(src="js/libs.min.js")
+		script(src="js/lightgallery.min.js")
 		script(src="js/main.js")
 		block script
