--- a/src/pug/pages/illustration.pug
+++ b/src/pug/pages/illustration.pug
@@ -32,58 +32,58 @@ block content
 			.illustration__section
 				.illustration__year 2019
 				.illustration__items
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
 			.illustration__section
 				.illustration__year 2018
 				.illustration__items
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
-					.illustration__item
+					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
 
 block script
