--- a/src/dev/sass/components/billboard.scss
+++ b/src/dev/sass/components/billboard.scss
@@ -17,6 +17,10 @@
         text-transform: uppercase;
         display: flex;
         flex-direction: column;
+
+        @media (max-width:1023px) {
+            font-size: 3.5rem;
+        }
     }
 
     &__subtitles {
@@ -34,6 +38,10 @@
 
         &--d {
             top: 100%;
+        }
+
+        @media (max-width:1023px) {
+            margin-right: 7px;
         }
     }
 }
