--- a/src/pug/pages/illustration.pug
+++ b/src/pug/pages/illustration.pug
@@ -32,7 +32,7 @@ block content
 			.illustration__section
 				.illustration__year 2019
 				.illustration__items
-					a(href="img/illustration.jpg").illustration__item
+					a(href="img/illustration.jpg" data-sub-html="lallalalaal").illustration__item
 						img(src="img/illustration.jpg", alt="")
 					a(href="img/illustration.jpg").illustration__item
 						img(src="img/illustration.jpg", alt="")
