--- a/src/dev/sass/components/catalog.scss
+++ b/src/dev/sass/components/catalog.scss
@@ -14,7 +14,7 @@
         margin: 35px -30px 0;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
 
         & .card {
             max-width: calc(33.333% - 60px);
@@ -63,6 +63,10 @@
                 right: -3px;
                 left: -3px;
             }
+        }
+
+        @media (max-width:1023px) {
+            margin-top: 0;
         }
     }
 
