--- a/src/dev/sass/components/footer.scss
+++ b/src/dev/sass/components/footer.scss
@@ -1,12 +1,16 @@
 .footer {
-    margin: 60px 0 20px;
-    position: relative;
+    margin: 0 0 20px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
 
     &:before {
         content: '';
         position: absolute;
         height: 1px;
         background-color: $white;
+        filter: invert(50%);
         left: 0;
         right: 0;
         top: 50%;
@@ -92,9 +96,5 @@
                 fill: $white;
             }
         }
-    }
-
-    @media (max-width:1023px) {
-        margin-top: 70px;
     }
 }
