--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,5 +7,8 @@ block variables
 block content
 
 	include ../modules/billboard
+	.toggle-lang.toggle-lang--mobile
+		a(href="#").toggle-lang__item.toggle-lang__item--ru.toggle-lang__item--active RU
+		a(href="#").toggle-lang__item.toggle-lang__item--en EN
 
 block script
