--- a/src/dev/sass/components/catalog.scss
+++ b/src/dev/sass/components/catalog.scss
@@ -45,6 +45,9 @@
         max-width: 60px;
         text-align: center;
         position: relative;
+        background: transparent;
+        color: inherit;
+        padding: 0;
 
         &:after {
             content: '';
