--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -47,6 +47,6 @@ block content
 				.card.card--action
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-			a(href="#").catalog__more more
+			button.catalog__more more
 
 block script
