--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -24,6 +24,16 @@ html(lang="ru-RU")
 		//- 	document.createElement('footer');
 		<![endif]-->
 	body
+		.ulyot
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
+			.ulyot-border
 		.b-page
 			include ../modules/header
 			block content
