--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -29,22 +29,22 @@ block content
 						.filter-acc__item product design
 						.filter-acc__item logotype
 			.catalog__items
-				.card.card--action
+				a(href="work.html").card.card--action.ulyot
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card.card--action
+				a(href="work.html").card.card--action.ulyot
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card.card--action
+				a(href="work.html").card.card--action.ulyot
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card.card--action
+				a(href="work.html").card.card--action.ulyot
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card.card--action
+				a(href="work.html").card.card--action.ulyot
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
-				.card.card--action
+				a(href="work.html").card.card--action.ulyot
 					.card__title travel agency
 					img(src="img/work1.png" alt="").card__image
 			button.catalog__more more
