--- a/src/pug/pages/illustration.pug
+++ b/src/pug/pages/illustration.pug
@@ -68,22 +68,30 @@ block content
 						img(src="img/illustration.jpg", alt="")
 			.illustration__section
 				.illustration__year 2018
-				.illustration__items
-					a(href="img/illustration.jpg").illustration__item
+				.illustration__items(style="pointer-events:none;")
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
-					a(href="img/illustration.jpg").illustration__item
+						.caption name lallal lal allala
+					a(href="img/illustration.jpg" data-sub-html='.caption').illustration__item
 						img(src="img/illustration.jpg", alt="")
+						.caption name lallal lal allala
 
 block script
