--- a/src/pug/pages/work.pug
+++ b/src/pug/pages/work.pug
@@ -10,7 +10,7 @@ block content
 		.work__container.b-container
 			.work__content
 				.work__left
-					.card
+					.card.card--sp
 						.card__title travel agency
 						img(src="img/work1.png" alt="").card__image
 				.work__right
