--- a/src/dev/sass/components/about.scss
+++ b/src/dev/sass/components/about.scss
@@ -23,6 +23,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
+            flex-basis: auto;
         }
     }
 
@@ -43,6 +44,10 @@
             width: 100%;
             height: auto;
 
+            & img {
+                width: 100%;
+            }
+
             @media (max-width:1023px) {
                 margin-right: 20px;
                 flex-basis: 345px;
@@ -59,6 +64,10 @@
             @media (max-width:1023px) {
                 position: static;
                 flex-basis: 243px;
+            }
+
+            @media (max-width:630px) {
+                display: none;
             }
         }
     }
