--- a/src/dev/sass/components/card.scss
+++ b/src/dev/sass/components/card.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 371px;
     position: relative;
-    padding: 61px 0 0 69px;
+    padding: 60px 0 0 50px;
     transition: ease-out 0.6s;
 
     &:before {
@@ -35,7 +35,7 @@
         line-height: 1.6875rem;
         letter-spacing: 0.2rem;
         text-transform: uppercase;
-        max-width: 165px;
+        max-width: 200px;
         color: $black;
         position: relative;
         z-index: 10;
@@ -56,6 +56,46 @@
             &:before {
                 top: 11px;
                 left: 15px;
+            }
+        }
+    }
+
+    @media (max-width:767px) {
+        
+        &--sp {
+            max-width: 265px;
+            height: 215px;
+            padding-left: 0;
+            margin-left: -15px;
+            padding-top: 12px;
+    
+            &:after {
+                top: 0;
+                left: 0;
+                right: 12px;
+                bottom: -12px;
+            }
+    
+            &:before {
+                height: 100px;
+                width: 100%;
+                bottom: 0;
+                left: auto;
+                right: 0;
+                top: auto;
+            }
+    
+            & .card__title {
+                color: $white;
+                padding-left: 15px;
+            }
+    
+            & .card__image {
+                right: 0;
+                height: 140px;
+                width: 80%;
+                object-fit: cover;
+                object-position: top;
             }
         }
     }
