--- a/src/dev/sass/components/work.scss
+++ b/src/dev/sass/components/work.scss
@@ -13,6 +13,8 @@
     &__left {
         margin-right: 100px;
         flex-shrink: 0;
+        max-width: 285px;
+        width: 100%;
 
         @media (max-width:1023px) {
             margin-right: 40px;
@@ -20,6 +22,7 @@
 
         @media (max-width:767px) {
             margin-right: 0;
+            max-width: 100%;
         }
     }
 
@@ -105,10 +108,10 @@
     }
 
     &__link {
-        margin: 37px auto 0;
+        margin: 60px auto -60px;
 
         @media (max-width:1023px) {
-            margin-top: 20px;
+            margin: 25px auto -20px;
         }
     }
 }
